# NCCT-API

./: colours.txt  main.py  maintenance.py  pyproject.toml
old/: colours.txt  links.py
routes/route01/: churches.txt  coordinates.txt  description.txt
routes/route02/: churches.txt  coordinates.txt  description.txt
routes/route03/: churches.txt  coordinates.txt  description.txt
routes/route04/: churches.txt  coordinates.txt  description.txt
routes/route05/: churches.txt  coordinates.txt  description.txt
routes/route06/: churches.txt  coordinates.txt  description.txt
routes/route07/: churches.txt  coordinates.txt  description.txt
routes/route08/: churches.txt  coordinates.txt  description.txt
routes/route09/: churches.txt  coordinates.txt  description.txt
routes/route10/: churches.txt  coordinates.txt  description.txt
routes/route11/: churches.txt  coordinates.txt  description.txt
routes/route12/: churches.txt  coordinates.txt  description.txt
routes/route13/: churches.txt  coordinates.txt  description.txt
routes/route14/: churches.txt  coordinates.txt  description.txt
routes/route15/: churches.txt  coordinates.txt  description.txt
routes/route16/: churches.txt  coordinates.txt  description.txt
routes/route17/: churches.txt  coordinates.txt  description.txt
routes/route18/: churches.txt  coordinates.txt  description.txt
routes/route19/: churches.txt  coordinates.txt  description.txt
routes/route20/: churches.txt  coordinates.txt  description.txt
routes/route21/: churches.txt  coordinates.txt  description.txt
(+15 files in other folders)
